--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,6 @@ jobs:
           fingerprints:
             - "f1:98:91:1c:d9:7c:5e:52:3c:20:26:e0:1c:10:4b:4c"
 
-      - run: ssh ubuntu@opel.ubuntu.srv
+      - run: ssh ubuntu@52.221.186.212
 
 
